# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  mistake  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  production.yaml
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
